# comfyui-face-liquify

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example/: 视频脸部液化变形工作流.json
nodes/: __init__.py  face_liquify.py
nodes/utils/: __init__.py  face_utils.py
